--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
     />
+	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Lobster&display=swap" rel="stylesheet">
+
+
 
     <link href="style.css" rel="stylesheet" />
   </head>
